# Deep-Wallwars

./: .clang-format  .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  setup-hooks.sh
.githooks/: pre-commit
scripts/: convert_font.py  data.py  deduplicate.py  model.py  plot_elo.py  poor_man.sh  train_generation.sh  training.py  training_experiments.ipynb
src/: batched_model.cpp  batched_model.hpp  batched_model_policy.cpp  batched_model_policy.hpp  cached_policy.cpp  cached_policy.hpp  cuda_wrappers.cpp  cuda_wrappers.hpp  cuda_wrappers_inl.hpp  dnn_policy.cpp  dnn_policy.hpp  game_recorder.cpp  game_recorder.hpp  gamestate.cpp  gamestate.hpp  main.cpp  mcts.cpp  mcts.hpp  model.cpp  model.hpp  play.cpp  play.hpp  simple_policy.cpp  simple_policy.hpp  state_conversions.cpp  state_conversions.hpp  tensorrt_model.cpp  tensorrt_model.hpp  util.hpp
src/gui/: board_renderer.cpp  board_renderer.hpp  game_gui.cpp  game_gui.hpp  gui_constants.hpp  gui_utils.cpp  gui_utils.hpp  input_handler.cpp  input_handler.hpp
test/: batched_model.cpp  gamestate.cpp  main.cpp  mcts.cpp  tensorrt_model.cpp
